--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -174,6 +174,7 @@ jobs:
           echo "apply provisioning profile"
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          ls ~/Library/MobileDevice/Provisioning\ Profiles
       - name: Build artifacts
         run: flutter build macos --release
       - name: Codesign executable
