--- a/config/app.cfg
+++ b/config/app.cfg
@@ -1,5 +1,7 @@
-appId=de.wekode.mml_admin
-appTitle=Meine Mediathek Administration
-appTitle_de=Meine Mediathek Administration
-appTitle_en=My Media Lib Administration
-appTitle_ru=Администрация Моя Медиятека
+appId=de.ecg.medialib.admin
+appTitle=ECG Mediathek
+appTitle_de=ECG Mediathek
+appTitle_en=ECG media library
+appTitle_ru=ECG Медиятека
+repository=ecg-media/mml.administration-app
+fileName=ECG-Medialib-Admin
