--- a/config/app.cfg
+++ b/config/app.cfg
@@ -3,5 +3,5 @@ appTitle=ECG Mediathek
 appTitle_de=ECG Mediathek
 appTitle_en=ECG media library
 appTitle_ru=ECG Медиятека
-repository=ecg-media/mml.administration-app
 fileName=ECG-Medialib-Admin
+repository=ecg-media\/mml.administration-app
